--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^5.9.1",
+    "@okta/okta-vue": "^5.0.2",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
+    "text-encoding": "^0.7.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
