--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@okta/okta-auth-js": "^5.9.1",
     "@okta/okta-vue": "^5.0.2",
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
     "text-encoding": "^0.7.0",
