remove unneeded codes

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VUE_APP_issuer=https://dev-3618325.okta.com/oauth2/default
 VUE_APP_clientid=0oa2wq9baxP3GjOSw5d7
+VUE_APP_blogsurl=https://egc18xe6uh.execute-api.ap-northeast-2.amazonaws.com/Prod/blogs
+VUE_APP_searchurl=https://egc18xe6uh.execute-api.ap-northeast-2.amazonaws.com/Prod/blogs/search
